// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar renders 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="PicassoContainer-centerAlignItems PicassoContainer-flex"
    >
      <div
        class="PicassoProgressBar-progressBar"
      >
        <div
          class="PicassoProgressBar-progressIndicator"
          style="width: 50%;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`ProgressBar renders with percentage 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="PicassoContainer-centerAlignItems PicassoContainer-flex"
    >
      <div
        class="PicassoProgressBar-progressBar"
      >
        <div
          class="PicassoProgressBar-progressIndicator"
          style="width: 50%;"
        />
      </div>
      <div
        class="PicassoContainer-leftxsmallMargin"
      >
        <p
          class="m-0 font-regular text-xxs text-graphite font-semibold PicassoProgressBar-percentageValue"
        >
          50
          %
        </p>
      </div>
    </div>
  </div>
</div>
`;
